2013-05-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	* rcsc/net/Makefile.am:
	- HostAddressクラスを追加．未テスト．

	* rcsc/net/Makefile.am:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/tcp_socket.cpp:
	* rcsc/net/tcp_socket.h:
	* rcsc/net/udp_socket.cpp:
	* rcsc/net/udp_socket.h:
	* rcsc/net/basic_socket.cpp:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/basic_socket.h:
	* rcsc/net/abstract_socket.h:
	- BasicSocketをAbstractSocketへリネーム

2013-05-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/basic_socket.cpp:
	* rcsc/net/basic_socket.h:
	- getPeerName()とgetPeerPort()を追加
	- UDPパケット受信時に接続先ポート番号だけでなくアドレスを全て上書きするように変更

2013-04-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/basic_socket.cpp:
	* rcsc/net/basic_socket.h:
	- typoを修正

2012-07-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.h:
	- BallObject::ghostCount()を追加

2012-06-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- ディフェンスライン推定の不具合修正．プレイヤごとに信頼性に基づ
	く移動見積もりを出していなかった

2012-06-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/Makefile.am:
	- 不足していたヘッダファイルを追加

	* rcsc/player/world_model.cpp:
	- オフサイドライン更新でプレイヤの移動量をめに見積るように変更

	* rcsc/Makefile.am:
	- 誤使用回避のために共有ライブラリバージョンを8に変更

	* rcsc/player/ball_object.cpp:
	- コミュニケーションによる情報更新を修正．パスメッセージによる更新
	を受け付ける信頼性カウントしきい値を1から0へ変更

	* rcsc/player/world_model.cpp:
	- WorldModel::prevOffsideLineX()を追加

2012-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/neck_scan_players.cpp:
	- 指定範囲内で敵を観測できそうにない場合に最初の候補が常に選択され
	ていたバグを修正

	* rcsc/player/world_model.cpp:
	- 位置の差分でボール速度情報を更新する条件を修正．衝突が発生して通
	常の推定が失敗した場合に，絶対一差分で速度情報を更新する範囲を拡大

	* rcsc/player/ball_object.cpp:
	- セットプレイ時に視界を広くしているとボールを見失ってしまうバグを修正

	* rcsc/player/player_agent.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- 聴覚情報で得たスタミナ情報を参照できるようにした
