@@ -1,7 +1,24 @@
+.libs
+.deps
+*.la
+*.lo
+*.o
+Doxyfile
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.*
+config
+configure
 librcsc-config
 librcsc.pc
 librcsc.spec
 librcscenv
+libtool
+m4/lt*
+m4/libtool.m4
 thermo_color_test
 rcg2txt
 rcgrenameteam
@@ -11,3 +28,5 @@ rcgverconv
 rcgversion
 rclmscheduler
 rclmtableprinter
+stamp-h1
+tmp
